# OS-Threads-Scheduler-Simulator

./: .gitignore  README.md  build.bat  plots.bat  run.bat
cpp/: CMakeLists.txt  main.cpp  scheduler.hpp
cpp/io/: csv.cpp  csv.hpp  html_report.cpp  html_report.hpp
cpp/policies/: edf.cpp  fcfs.cpp  policies.hpp  rm.cpp  rr.cpp
cpp/sim/: engine.cpp  engine.hpp  tasks.cpp  tasks.hpp
python/: analyze.py
